# meetings-reminder-system

./: .gitignore  APPENDIX.md  README.md  TESTING.md  pyproject.toml  requirements.txt  run.py  screens.py  setup.cfg  test-if-branch-is-protected.txt
assets/css/: meetings.css
assets/documentation/: Manual-Testing-Results.numbers  example.xlsx  report.html
assets/scripts/: conftest.py  meeting.py  participant.py  pseudocode.py  schedule.py  test_meeting.py  test_participant.py  test_schedule.py
src/reminding/: meeting.py  participant.py  schedule.py  worksheet.py
tests/: conftest.py  test_meeting.py  test_participant.py  test_schedule.py  test_worksheet.py
