[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reminding"
version = "0.0.1"
description = "application to help organizing meetings"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

classifiers = [
"Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = "tests"

[tool.black]
line-length = 79